# libtorchMNISTAbstraction

./: .gitignore  CMakeLists.txt  README.md  mnist_download.py
include/: Architecture.h  Model.h
src/: Architecture.cpp  Model.cpp  main.cpp
